--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,12 @@ services:
     working_dir: /app
     volumes:
       - .:/app
-    entrypoint: /app/entrypoint.sh
+    tty: true
+    command: >
+      sh -c "
+        alembic upgrade head &&
+        uvicorn code.main:app --host 0.0.0.0 --port 8000 --reload"
+#    entrypoint: /code/entrypoint.sh
     ports:
       - "8000:8000"
     depends_on:
