--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,10 @@ services:
     volumes:
       - .:/app
     tty: true
-    command: >
-      sh -c "
-        alembic upgrade head &&
-        uvicorn code.main:app --host 0.0.0.0 --port 8000 --reload"
+#    command: >
+#      sh -c "
+#        alembic upgrade head &&
+#        uvicorn code.main:app --host 0.0.0.0 --port 8000 --reload"
 #    entrypoint: /code/entrypoint.sh
     ports:
       - "8000:8000"
